updated params and sed for dw20_17-1.10.0